# api/docs/swagger.json
@@ -160,7 +160,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.CreateUpdateResponsibleRequest"
+                            "$ref": "#/definitions/models.UpdateResponsibleRequest"
                         }
                     }
                 ],
@@ -169,6 +169,48 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/models.CreateResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/models.BadRequestError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/models.InternalServerError"
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "description": "API for deleting responsible",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "responsible"
+                ],
+                "summary": "Delete Responsible",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "responsible_id",
+                        "name": "responsible_id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.SuccessResponse"
                         }
                     },
                     "400": {
@@ -273,6 +315,35 @@
                     "type": "integer"
                 },
                 "id": {
+                    "type": "string"
+                },
+                "name_of_step": {
+                    "type": "string"
+                },
+                "organization": {
+                    "type": "string"
+                },
+                "role": {
+                    "type": "string"
+                },
+                "updated_at": {
+                    "type": "integer"
+                }
+            }
+        },
+        "models.SuccessResponse": {
+            "type": "object",
+            "properties": {
+                "success": {
+                    "type": "boolean",
+                    "example": true
+                }
+            }
+        },
+        "models.UpdateResponsibleRequest": {
+            "type": "object",
+            "properties": {
+                "comment": {
                     "type": "string"
                 },
                 "name_of_step": {
